trying to make the css work with the deploy, experiminting

--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
   width: 100vw;
   background-color: #58355E;
   color: #E4C3AD;
-  font-family: Signwood;
+  font-family: 'Courier New', Courier, monospace;
   padding: 0px;
   align-items: start;
 }
