--- a/src/App.css
+++ b/src/App.css
@@ -93,12 +93,13 @@ margin: 10px !important;
   margin: 0 auto;
   border: 0;
   /* margin-top: -100px; */
-  width: 100%;
+  width: 60%;
+  margin-top: -200px;
  
   @media (max-width: 768px) {
     margin-top: -250px !important;
     width: 100% !important;
-    height: 500px;
+    height: 600px;
  
 }
 }
