still playing with font destinations

--- a/src/App.css
+++ b/src/App.css
@@ -136,7 +136,7 @@ margin: 10px !important;
 @font-face {
   font-family: "Showtime";   
   src: local("Showtime"),
-    url("./Showtime.ttf") format("truetype");
+    url("./components/Showtime.ttf") format("truetype");
 }
 
 @font-face {
@@ -148,7 +148,7 @@ margin: 10px !important;
 @font-face {
   font-family: "Signwood";   
   src: local("Signwood-2Om7l"),
-    url("./Signwood-2Om7l.ttf") format("truetype");
+    url("./components/Signwood-2Om7l.ttf") format("truetype");
 }
 
 @font-face {
